--- a/index.html
+++ b/index.html
@@ -97,6 +97,10 @@
     <div class="content-wrapper">
         <div class="grid-1-1">
             <div class="page-content">
+                <div clas="promo-section">
+                    <h4 class="promo-title">Welcome to EleutherAI</h4>
+                    <h4 class="promo-text">A grassroots collection of researchers working to open source AI research</h4>
+                </div>
                 
                     <div class="project-section">
                         <div class="project-icon"><img src="https://eleutherai.github.io//images/gpt-neo.png" alt="Gpt-Neo"></div>
