--- a/projects/gpt-neo/index.html
+++ b/projects/gpt-neo/index.html
@@ -105,7 +105,7 @@
 <li>
 <h2 id="gpt-neo">GPT-Neo</h2>
 <p>GPT-Neo is the code name for a series of transformer-based language models loosely styled around the GPT architecture that we plan to train and open source. Our primary goal is to replicate a GPT-3 sized model and open source it to the public, for free.</p>
-<p>Along the way we will be running experiments with <a href="https://arxiv.org/abs/1701.06538">alternative</a> <a href="ttps://arxiv.org/abs/1911.03864">architectures</a> and <a href="https://arxiv.org/abs/2006.16236">attention</a> <a href="https://www.aclweb.org/anthology/2020.acl-main.672.pdf">types</a>, releasing any intermediate models, and writing up any findings on our blog.</p>
+<p>Along the way we will be running experiments with <a href="https://arxiv.org/abs/1701.06538">alternative</a> <a href="https://arxiv.org/abs/1911.03864">architectures</a> and <a href="https://arxiv.org/abs/2006.16236">attention</a> <a href="https://www.aclweb.org/anthology/2020.acl-main.672.pdf">types</a>, releasing any intermediate models, and writing up any findings on our blog.</p>
 <p>Our models are built in Tensorflow-mesh, which will allow us to scale up to GPT-3 sizes and beyond using simultaneous model and data parallelism.</p>
 </li>
 </ul>
